# technical_tasks

./: README.md  pyproject.toml
authorization_config/: config.json
database_scripts/: korzinka.sql
database_scripts/table/: c_device.sql  c_location.sql  c_os.sql  c_publisher.sql  c_track.sql  user_tracking_logs.sql
src/user_tracking_logs/: main.py
src/user_tracking_logs/db_connectors/: postgresql.py
src/user_tracking_logs/db_writer/: writer.py
src/user_tracking_logs/logs_settings/: settings.py  setup_logger.py
src/user_tracking_logs/references_writer/: writer.py
