[tool.poetry]
name = "technical-tasks"
version = "0.1.0"
description = ""
authors = ["NurmukhametovRA <nurmukhametov.rodion1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
